fix: Font sizes in mobile too big

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,12 +11,14 @@
 
 html {
 	font-size: 16px;
-	/*line-height: 1.2em;*/
+	@media @mediaDesktop{
+		font-size: 22px;
+	}
 }
 
 p {
 	line-height: 1.5em;
-	font-size: 150%;
+	font-size: 120%;
 }
 
 .display-flex{
@@ -53,29 +55,23 @@ p {
 		color: #FFF;
 	    padding: 15px 5%;
 		.title {
-			font-size: 300%;
+			font-size: 200%;
 			text-transform:uppercase;
 			.margin-0;
-			@media @mediaDesktop {
-				font-size: 200%;
-			}
 		}
-		.lang-selector{
-			font-size: 200%;
-			@media @mediaDesktop {
-				font-size: 150%;
-			}
-			.lang-link{
+		.lang-selector {
+			font-size: 150%;
+			.lang-link {
 				text-transform: uppercase;
 				text-decoration: none;
 				color: #777;
 				display:inline-block;
 			}
-			.lang-link.active{
+			.lang-link.active {
 				color: @light;
 				.fontWeight-bold
 			}
-			.lang-link:hover{
+			.lang-link:hover {
 				color: #FFF;
 			}
 		}
@@ -87,42 +83,33 @@ p {
 	background-repeat: no-repeat;
 	background-position: 50% 100%;
 	color: #FFF;
-	height: 768px;
+	height: 480px;
 	position: relative;
 	text-align:center;
 	.phone {
 		background: linear-gradient(to right, fade(@contrast, 0%), @contrast, fade(@contrast, 0%));
 		color: #F0F0F0;
-	    font-size: 400%;
+	    font-size: 200%;
 		left:0;
 		position:absolute;
 		right:0;
 		top: 150px;
-		@media @mediaDesktop {
-			font-size: 300%;
-		}
 	}
 	.sub{
 		bottom:0;
 		padding: 0 0 40px;
 		text-transform:uppercase;
 		.big{
-			font-size:300%;
-			@media @mediaDesktop {
-				font-size: 200%;
-			}
+			font-size:200%;
 		}
 		.small{
 			bottom:100px;
-			font-size:200%;
+			font-size:150%;
 			color:@light;
-			@media @mediaDesktop {
-				font-size: 150%;
-			}
 		}
 	}
 	@media @mediaDesktop {
-		height: 500px;
+		height: 768px;
 	}
 }
 #body{
@@ -131,7 +118,7 @@ p {
 	/* align center en pantalla grande */
 	h2{
 		font-weight:300;
-		font-size: 220%;
+		font-size: 175%;
 		text-align: center;
 		margin: 30px 0 0px;
 		@media @mediaDesktop {
@@ -176,7 +163,6 @@ p {
 		p {
 			line-height: 1.7em;
 			color: #666;
-			font-size: 90%;
 		}
 		h2 {
 			color: @base;
@@ -214,8 +200,12 @@ p {
 	}
 
 	h3 {
-		font-size: 200%;
+		font-size: 150%;
 		color: @light;
+	}
+	p,
+	a {
+		font-size: 100%;
 	}
 
 	p,
@@ -233,10 +223,6 @@ p {
 		}
 		h3 {
 			font-size: 120%;
-		}
-		p,
-		a {
-			font-size: 90%;
 		}
 	}
 }
